--- a/app/globals.css
+++ b/app/globals.css
@@ -46,7 +46,7 @@
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
+    --primary-glow: radial-gradient(rgba(255, 1, 225, 0.4), rgba(230, 29, 163, 0));
     --secondary-glow: linear-gradient(
       to bottom right,
       rgba(1, 65, 255, 0),
@@ -73,6 +73,16 @@
   }
 }
 
+.container {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  width: 100%;
+  margin: 1rem;
+}
+
+
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -83,6 +93,11 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 body {
